[tool.poetry]
name = "agario-ai"
version = "0.1.0"
description = ""
authors = ["Nicolas <naquiroz@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
mss = "^6.1.0"
opencv-python = "^4.4.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
black = "^20.8b1"

[tool.black]
line-length = 99
target-version = ["py36", "py37", "py38"]
exclude = '/(\.venv)/'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
